Added two data binding with BaseObservable and @Bindable

--- a/two-way-databinding/app/src/main/res/values/strings.xml
+++ b/two-way-databinding/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TwoWayDataBindingWithLiveData</string>
+    <string name="two_way_data_binding_with_livedata">Two way data binding with Livedata</string>
+    <string name="two_way_data_binding_with_baseobservable">Two way data binding with BaseObservable</string>
 </resources>
