--- a/jetpack-compose-playground/app/src/main/res/values/strings.xml
+++ b/jetpack-compose-playground/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">JetpackComposePlayground</string>
+    <string name="basic_example">Basic Example</string>
+    <string name="state_example">State Example</string>
+    <string name="enter_firstname">Enter first name</string>
+    <string name="enter_lastname">Enter last name</string>
+    <string name="enter_username">Enter username</string>
 </resources>
